styles/place.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
/* Roboto, Raleway, and Merriweather */
:root {
    --font-header: 'Merriweather';
    --font-headline: 'Roboto';
    --font-body: 'Raleway';
    /* colors */
    --primary-color: #00a9ce;
    --secondary-color: #fdda25;
    --box-heading-color: #a99985;
    --box-fill-color: #dad2bc;
    --nav-color: #70798c;
    --nav-hover-color: #a63a50;
    /* text colors */
    --head-text: #ffffff;
    --text: #000000;
    /* font size */
    --font-base: 16px;
    --font-small: 1em;
    --font-medium: 1.5em;
    --font-large: 3em;
}

@media screen and (min-width: 545px) {

    * {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }

    header {
        padding-bottom: 30px;
        background-color: var(--secondary-color);
    }
    
    header h1 {
        display: flex;
        justify-content: center;
        font-size: var(--font-large);
        padding-top: 20px;
        padding-bottom: 15px;
        background-color: var(--primary-color);
        color: var(--head-text);
        font-family: var(--font-header);
    }

    .container {
        width: 300px;
        max-width: none;
        background-color: rgba(223, 223, 223, 0.75);
        color: var(--text);
        border: 1px solid rgb(100, 100, 100);
    }

    .container h2 {
        padding-left: 1em;
        margin-right: 5em;
        margin-left: -0.5em;
        margin-top: 0.5em;
        background-color:  #fdd925e9;
        color:var(--text);
        font-family: var(--font-body);
    }

    .container p {
        padding-left:  1em;
    }

    #hero {
        width: 100%;
        max-width: none;
    }

    #large-hero {
        width: 100%;
    }

    #data-list {
        position: absolute;
        align-items: center;
        left: 5%;
        top: 20%;
    }

    #weather-list {
        position: absolute;
        bottom: 10%;
        right: 5%;
    }

    #weather-icon {
        display: block;
    }

    #weather-svg {
        display: none;
    }
}



* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header {
    padding-bottom: 30px;
    background-color: var(--secondary-color);
}
    
header h1 {
    display: flex;
    justify-content: center;
    font-size: var(--font-large);
    padding-top: 20px;
    padding-bottom: 15px;
    background-color: var(--primary-color);
    color: var(--head-text);
    font-family: var(--font-header);
}

#hero {
    width: 100%;
    max-width: none;
}

picture {
    background-color: var(--secondary-color);
}

.container h2 {
    padding-top: 1em;
    padding-bottom: 1em;
}

.container p {
    padding-top: 0.75em;
}

#data-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 1em;
}

#weather-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 2em;
    border-top: 1px solid var(--secondary-color);
}

#large-hero {
    width: 100%;
}

footer {
    grid-row: 3;
    position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
    grid-column: 1/-1;
    font-size: var(--font-small);
    color: var(--light-text);
    background-color: var(--primary-color);
    padding: 1rem;
    text-align: center;
}

